<resources>
    <string name="app_name">JormYab</string>
    <string name="hello">خوش آمدید</string>
    <string name="forgot_password">forgot password</string>
    <string name="sign_up">sign up</string>
    <string name="login">login</string>
    <string name="please_enter_mobile_number">please enter mobile number</string>
    <string name="mob_hint">09.........</string>
    <string name="submit">submit</string>
    <string name="your_name">your name</string>
    <string name="please_enter_code">please enter code</string>
    <string name="name_of_user">mamad</string>
    <string name="select_crime">select crime that you see</string>
    <string name="motor_robbery">motor robbery</string>
    <string name="robbery_from_house">robbery from house</string>
    <string name="murdor">murdor</string>
    <string name="other_crimes_or_violations">other crimes or violations</string>
    <string name="welcome">welcome</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_know">don\'t have account? sign up now</string>
    <string name="login_know">already have an account? login now</string>
    <string name="last_name">last name</string>
    <string name="first_name">first name</string>
    <string name="gmail">jormyab@gmail.com</string>
    <string name="phone_number">09*********</string>
    <string name="todo">TODO</string>
    <string name="name">name</string>
    <string name="mobile_number">mobile_number</string>
    <string name="report_crime">report crime</string>
    <string-array name="crimes">
        <item>motor robbery</item>
        <item>rubbery from house</item>
        <item>murder</item>
        <item>other crimes or violation</item>
    </string-array>
    <string-array name="HH">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
    <item>9</item>
    <item>10</item>
    <item>11</item>
    <item>12</item>
    <item>13</item>
    <item>14</item>
    <item>15</item>
    <item>16</item>
    <item>17</item>
    <item>18</item>
    <item>19</item>
    <item>20</item>
    <item>21</item>
    <item>22</item>
    <item>23</item>
    <item>24</item>
</string-array>

    <string-array name="DD">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="MM">
        <item>فروردین</item>
        <item>اردیبهشت</item>
        <item>خرداد</item>
        <item>تیر</item>
        <item>مرداد</item>
        <item>شهریور</item>
        <item>مهر </item>
        <item>آبان</item>
        <item>آذر</item>
        <item>دی</item>
        <item>بهمن</item>
        <item>اسفند</item>
    </string-array>
    <string-array name="YY">
        <item>1370</item>
        <item>1371</item>
        <item>1372</item>
        <item>1373</item>
        <item>1374</item>
        <item>1375</item>
        <item>1376</item>
        <item>1377</item>
        <item>1378</item>
        <item>1379</item>
        <item>1380</item>
        <item>1381</item>
        <item>1382</item>
        <item>1383</item>
        <item>1384</item>
        <item>1385</item>
        <item>1386</item>
        <item>1387</item>
        <item>1388</item>
        <item>1389</item>
        <item>1390</item>
        <item>1391</item>
        <item>1392</item>
        <item>1393</item>
        <item>1394</item>
        <item>1395</item>
        <item>1396</item>
        <item>1397</item>
        <item>1398</item>
        <item>1399</item>
        <item>1400</item>
    </string-array>
</resources>