<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:textSize="44sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:theme="@style/myEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_mobile_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="11"
            tools:layout_editor_absoluteX="0dp"
            android:drawableEnd="@drawable/ic_baseline_smartphone_24"
            tools:layout_editor_absoluteY="498dp"
            android:hint="phone number"
            android:drawableRight="@drawable/ic_baseline_smartphone_24" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="408dp"
        android:layout_marginLeft="140dp"
        android:background="@drawable/bg_button_white"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/go_to_sign_up_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_know"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintRight_toRightOf="@id/login_btn"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/login_btn"
        android:layout_marginTop="10dp"
        android:onClick="action"
        android:clickable="true"
        android:focusable="true" />




</androidx.constraintlayout.widget.ConstraintLayout>